# rust-number-theory

./: Cargo.toml  README.md  dep.md
.github/workflows/: release-rfactor.yml  rust.yml
data/: input-discriminant.toml  input-discriminant.yml  input-factorization-2.toml  input-factorization-3.toml  input-factorization-mod-p-0.toml  input-factorization-polynomial-0.toml  input-factorization-polynomial-1.toml  input-factorization-polynomial-2.toml  input-factorization-polynomial-3.toml  input-factorization.toml  input-integral-basis.yml  input-prime-decomposition-0.toml  input-resultant.yml
examples/: discriminant.rs  ecm.rs  find_units_manual.rs  hnf.rs  ideal.rs  integral_basis.rs  integral_basis_manual.rs  order.rs  prime-decomposition.rs  resultant.rs
number-theory-elementary/: Cargo.toml
number-theory-elementary/src/: kronecker.rs  lib.rs  primes.rs
number-theory-linear/: Cargo.toml
number-theory-linear/src/: cholesky.rs  determinant.rs  determinant_real.rs  gauss_elim.rs  hnf.rs  lib.rs  lll.rs  matrix.rs  solve_linear_system.rs  subspace.rs  triangular.rs
src/: algebraic.rs  determinant.rs  discriminant.rs  dummy.rs  ecm.rs  ecm_parallel.rs  embeddings.rs  factorize.rs  gauss_elim.rs  hnf.rs  ideal.rs  integral_basis.rs  inverse.rs  lib.rs  main.rs  mult_table.rs  numerical_roots.rs  order.rs  perfect_power.rs  poly_mod.rs  polynomial.rs  prime.rs  resultant.rs  round2.rs  triangular.rs
src/class/: mod.rs  roots_of_unity.rs
src/integral_basis/: mod.rs  round2.rs
src/poly_mod/: factorize.rs  factorize_mod_p.rs  hensel.rs  linear.rs  mod.rs  prim.rs
src/poly_z/: mod.rs
src/prime_decomp/: bl.rs  mod.rs  simple.rs
