[package]
name = "rust-number-theory"
version = "0.1.0"
authors = ["koba-e964 <3303362+koba-e964@users.noreply.github.com>"]
edition = "2021"
publish = false
rust-version = "1.74"
default-run = "rust-number-theory"

[dependencies]
# This rand dependency must be 0.8 because num-bigint:0.4.4 depends on rand:0.8.
# https://github.com/rust-num/num-bigint/blob/num-bigint-0.4.4/Cargo.toml#L54
rand = "0.8"
# serde_yaml introduced a breaking change in 0.9.0:
# requiring tags for structs, enums and tuples.
serde_yaml = "0.8"
toml = "0.8"
bpaf = { version = "0.9", features = ["derive"] }

[dependencies.serde_json]
version = "1"
features = ["preserve_order"]

[dependencies.num]
version = "0.4"
features = ["rand", "serde"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.number-theory-linear]
version = "0.1"
path = "./number-theory-linear"

[dependencies.number-theory-elementary]
version = "0.1"
path = "./number-theory-elementary"


[workspace]
members = ["number-theory-elementary", "number-theory-linear"]

[[bin]]
name = "rfactor"

[profile.release-with-symbols]
inherits = "release"
strip = false
